--- a/templates/donate.html
+++ b/templates/donate.html
@@ -18,27 +18,27 @@
         class="form-control"
         id="email"
         name="email"
-        placeholder="Email de contato"
+        placeholder="email de contato"
       />
     </div>
     <div class="form-group">
-      <label for="titulo">Título:</label>
+      <label for="volume">Volume da unidade de óleo':</label>
       <input
         type="text"
         class="form-control"
-        id="titulo"
-        name="titulo"
-        placeholder="Titulo do livro"
+        id="volume"
+        name="volume"
+        placeholder="volume da unidade"
       />
     </div>
     <div class="form-group">
-      <label for="genero">Gênero</label>
+      <label for="bairro">Bairro de coleta da unidade:</label>
       <input
         type="text"
         class="form-control"
-        id="genero"
-        name="genero"
-        placeholder="Gênero do livro"
+        id="bairro"
+        name="bairro"
+        placeholder="bairro de coleta da unidade"
       />
     </div>
     <br />
